# llm-cost-latency-monitor

./: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_llm_calls.py
docs/: EXECUTION_PLAN.md  architecture.md  design-decisions.md  failure-modes.md  implementation_plan.md  roadmap.md  security.md
examples/: run_demo.py  wrapped_fastapi_app.py  wrapped_rag_app.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BudgetAlertsPanel.tsx  DailyReportView.tsx  DemoModeBadge.tsx  ErrorBoundary.tsx  KpiCards.tsx  LoadingSkeleton.tsx  LogCallForm.tsx  ModelComparison.tsx  PageHeader.tsx  PromptVersionBreakdown.tsx  Sidebar.tsx  StateViews.tsx  TimeSeriesCharts.tsx
frontend/src/lib/: api.ts  format.ts  mockData.ts  useSourcedData.ts
frontend/src/types/: index.ts
frontend/tests/: setup.ts
src/llm_monitor/: __init__.py  budgets.py  config.py  dashboard.py  db.py  main.py  middleware.py  models.py  pricing.py  reports.py  sdk.py  storage.py  storage_db.py  worker.py
tests/: conftest.py  test_api.py  test_budgets.py  test_core.py  test_dashboard.py  test_db.py  test_llmmetrics.py  test_middleware.py  test_models.py  test_pricing.py  test_reports.py  test_sdk.py  test_sdk_error.py  test_smoke.py  test_storage.py  test_storage_db.py  test_worker.py
(+14 files in other folders)
