[project]
name = "llm-cost-latency-monitor"
version = "1.0.0"
description = "Self-hosted LLM observability layer tracking token usage, cost estimation, and latency metrics"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "httpx>=0.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0"
]
